Added contact page

--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -1,26 +1,20 @@
 /* Footer.css */
+
 .footer {
-  background-color: #333;
-  color: white;
   padding: 20px 0;
 }
 
 .footer-container {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  justify-content: space-around;
+  padding: 20px;
 }
 
-.footer-links {
-  flex: 1;
-  min-width: 200px;
-  margin: 10px;
-}
-
-.footer-links h4 {
+.footer-links h4,
+.footer-contact h4,
+.footer-social h4 {
+  color: #8c6e46;
   margin-bottom: 10px;
 }
 
@@ -33,34 +27,29 @@
   margin: 5px 0;
 }
 
-.footer-links a {
-  color: white;
+.footer-links ul li a {
   text-decoration: none;
+  color: #8c6e46;
 }
 
-.footer-links a:hover {
-  text-decoration: underline;
-}
-
-.footer-contact,
-.footer-social {
-  flex: 1;
-  min-width: 200px;
-  margin: 10px;
+.footer-contact p,
+.footer-bottom p {
+  margin: 5px 0;
 }
 
 .footer-social a {
-  margin-right: 10px;
-  color: white;
-  text-decoration: none;
+  font-size: 1.5rem;
+  color: #8c6e46;
+  transition: color 0.3s ease;
 }
 
-.footer-social i {
-  font-size: 20px;
+.footer-social a:hover {
+  color: #5a4a2c; /* Darker shade for hover effect */
 }
 
 .footer-bottom {
   text-align: center;
-  padding: 10px 0;
-  background-color: #222;
+  padding: 10px;
+  color: #8c6e46;
+  font-size: 0.9rem;
 }
